# SlackToJournal

./: .env.example  .gitignore  GUI_CONFIG.md  README.md  SLACK_SETUP.md  gui.py  install.bat  pyproject.toml  pytest.ini  test_local_generation.py
.claude/: settings.local.json
.github/instructions/: feature.instructions.md  ui.instructions.md
configs/: settings.yaml
configs/credentials/: .gitkeep
scripts/: deploy.sh  setup_credentials.py  setup_slack.py  start.sh
src/: main.py  settings.py
src/ai_processing/: __init__.py  client.py  prompts.py  schemas.py  service.py
src/core/: __init__.py  exceptions.py  logging.py
src/drive_integration/: __init__.py  auth.py  client.py  schemas.py  service.py
src/gui/: __init__.py  app.py  cli_wrapper.py
src/journal/: __init__.py  schemas.py  service.py  templates.py
src/scheduler/: __init__.py  schemas.py
src/slack_integration/: __init__.py  adapter.py  client.py  direct_client.py  direct_service.py  schemas.py  service.py  utils.py
tests/: conftest.py
tests/unit/: test_settings.py
tests/unit/test_slack_integration/: __init__.py  test_utils.py
